# velora_backend

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  P2_CIQ_schema-2026-04-07.sql  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.postman/: resources.yaml
.quartz-engine/: package-lock.json
Detail_API_Request_Response/: ALL_API_Success_Reference.txt  Prototype_Flow_API_Reference.txt
alembic/: env.py
alembic/versions/: 0f5f739b07b7_initial_schema.py  2f186183f4cc_cascade_delete_config_control_chain.py  9b4037f71058_session_table_creation.py  a1c3e5f7b9d2_add_control_test_templates.py  b2d4f6a8c0e1_template_source_test_id.py  ed90be1d2467_widen_evidence_file_type_to_255.py
app/: main.py
app/api/: deps.py
app/core/: azure_storage.py  config.py  exceptions.py  local_storage.py  logging.py  security.py  storage.py
app/db/: base.py  session.py
app/middleware/: rate_limit.py  request_logging.py
app/models/: base.py  client.py  config_control.py  control_change_log.py  control_framework.py  control_repository.py  control_test.py  control_test_result.py  control_test_template.py  engagement_team.py  evidence_file.py  permission.py  review_cycle.py  role.py  role_permission.py  test_log.py  user.py  user_role.py  version.py
app/repositories/: base_repo.py  client_repo.py  config_control_repo.py  control_change_log_repo.py  control_repo.py  control_test_repo.py  engagement_team_repo.py  evidence_repo.py  review_cycle_repo.py  role_repo.py  test_log_repo.py  user_repo.py  version_repo.py
app/schemas/: client.py  common.py  config_control.py  control.py  control_test.py  engagement_team.py  evidence.py  review_cycle.py  role.py  test_log.py  token.py  user.py  version.py
app/services/: agent_configuration.py  auth_service.py  client_service.py  config_control_service.py  control_service.py  (+8 more)
data/: UKMC_master_control.xlsx
postman/: CIQ_Backend_v2.postman_collection.json  CIQ_Backend_v3.postman_collection.json
scripts/: compile_kb.py  flush_db.py  seed.py  seed_ukmc_controls.py  test.py  ukmc_control_json_full.json  ukmc_master_controls.json  umkc_v0.json
tests/: conftest.py
velora_kb/: Auditor Workflow.md  CPT.md  Classification Decision Rules.md  Compliance Engine.md  Control Effectiveness.md  Control Testing & SOX Methodology Overview.md  Email Evidence.md  Evidence Characteristics.md  Evidence Gatherer.md  Evidence Processing.md  Excel Evidence.md  How To Scope.md  IPE SAP Image Validation.md  IPE.md  OCR Extraction.md  PDF Evidence.md  ROW_LEVEL_ANALYSIS.md  SAP Screenshot Evidence.md  Structured Extraction.md  Tabular Evidence.md  Test Classification.md  Tool Registry.md  Tool Selection Strategy.md  index.md
(+124 files in other folders)
