[project]
name = "ciq-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "azure-storage-blob>=12.20",
    "httpx>=0.28",
    "structlog>=24.2",
    "python-multipart>=0.0.9",
    "prometheus-fastapi-instrumentator>=7.0",
    "google-adk>=1.33.0",
    "pandas>=3.0.3",
    "litellm>=1.84.0",
    "opencv-python>=4.13.0.92",
    "pytesseract>=0.3.13",
    "pillow>=12.2.0",
    "numpy>=2.4.5",
    "openpyxl>=3.1.5",
    "langgraph>=1.2.0",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.2.2",
    "langsmith[google-adk]>=0.8.5",
    "greenlet>=3.5.0",
    "psycopg2-binary>=2.9.12",
    "psycopg2>=2.9.12",
    "docxtpl>=0.20.2",
]

[tool.poetry]
name = "ciq-backend"
version = "1.0.0"
description = "CIQ Backend API"
authors = []
package-mode = false
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.124"
uvicorn = {version = "^0.34", extras = ["standard"]}
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
asyncpg = "^0.29"
alembic = "^1.13"
pydantic = "^2.7"
pydantic-settings = "^2.3"
pyjwt = "^2.8"
bcrypt = "^4.1"
azure-storage-blob = "^12.20"
httpx = "^0.28"
structlog = "^24.2"
python-multipart = "^0.0.9"
prometheus-fastapi-instrumentator = "^7.0"
google-adk = "^1.33.0"
pandas = "^3.0.3"
litellm = "^1.84.0"
opencv-python = "^4.13.0.92"
pytesseract = "^0.3.13"
pillow = "^12.2.0"
numpy = "^2.4.5"
openpyxl = "^3.1.5"
langgraph = "^1.2.0"
langchain = "^1.3.1"
langchain-openai = "^1.2.1"
python-dotenv = "^1.2.2"
langsmith = {extras = ["google-adk"], version = "^0.8.5"}
greenlet = "^3.5.0"
psycopg2-binary = "^2.9.12"
psycopg2 = "^2.9.12"
docxtpl = "^0.20.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
pytest-mock = "^3.14"
black = "^24.4"
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.7"
aiosqlite = "^0.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build-kb = "scripts.compile_kb:compile"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
